test/types/tuple/bharshbarg/groupedInTuple.good
groupedInTuple.chpl:2: error: variable-length argument may not be grouped in a tuple
