test/types/tuple/bharshbarg/groupedInTuple.chpl

proc foo((x, y, z) ...) {
  writeln("x = ", x);
  writeln("y = ", y);
  writeln("z = ", z);
}
